[package]
name = "sqldb-sqlx"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1.64"
atty = "0.2.14"
base64 = "0.21.0"
bit-vec = "0.6.3"
bytes = "1.4.0"
futures = "0.3.26"
minicbor = { version = "0.19.0", features = ["half", "std"] }
native-tls = "0.2.11"
once_cell = "1.17.1"
rmp-serde = "1.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = [
    "any",
    "json",
    "mssql",
    "mysql",
    "postgres",
    "runtime-tokio-rustls",
    "time",
    "uuid",
] }
thiserror = "1.0.38"
time = { version = "0.3.20", features = ["formatting"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = "1.3.0"
wasmbus-rpc = { version = "0.11.2", features = ["otel"] }
wasmcloud-interface-sqldb = "0.8.1"

[dev-dependencies]
wasmcloud-test-util = "0.6.4"

[[bin]]
name = "sqldb-sqlx"
path = "src/main.rs"
